johnson-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: johnson-frontend
  labels:
    app: johnson-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: johnson-frontend
